2001-03-13  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-cut-and-paste.c (html_engine_insert_text): stop
	inserting links after ' ' (space)

	* htmlundo.c (html_undo_level_end): copy save_undo to level anyway
	(redo_level_end): ditto

	* htmlengine-edit-cut-and-paste.c
	(html_engine_insert_empty_paragraph): stop inserting links
	after paragraph insertion

	* gtkhtml.c (command): set update_styles
	(move_selection): ditto
	(cursor_move): ditto
	(key_press_event): use update_styles

	* gtkhtml-private.h: added update_styles flag

2001-03-12  Radek Doulik  <rodo@ximian.com>

	* gtkhtml-search.c (destroy): don't set gtkhtml's data here, as
	gtkhtml is already destroyed

2001-03-11  Larry Ewing  <lewing@ximian.com>

	* htmlinterval.h: fix harmless typo in copyright header.

2001-03-10  Larry Ewing  <lewing@ximian.com>

	* gtkhtml-search.c (destroy): dereference data before we destroy
	it, this should fix the crashes ettore has been seeing.

2001-03-08  Larry Ewing  <lewing@ximian.com>

	* htmlbutton.c (html_button_class_init): add encode method.
	(encode): new method to encode the button value. (patch from "Bill
	Gribble" <grib@gnumatic.com>)

	* htmlbutton.h: add success indicator. (patch from "Bill Gribble"
	<grib@gnumatic.com>)

	* htmlengine.c (parse_object_params): handle the multiple leading
	spaces you can get from tabs and &nbsp; correctly.
	(is_leading_space): helper funtion to find leading whitespace.

	* htmlclueflow.c: use IS_UTF8_NBSP.
	
	* htmlentity.h (IS_UTF8_NBSP): helper macro to match &nbsp;

2001-03-08  Radek Doulik  <rodo@ximian.com>

	* gtkhtml-search.c (data_destroy): don't destroy widget, as this
	is called from widget destroy handler

2001-03-07  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (parse_t): only emit the title changed signal if we
	have a valid title and were already in a title tag.

2001-03-07  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-table.c (delete_column_setup_undo): new undo
	setup for column delete